[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
mio = { version="0.8", features = ["os-poll", "net"]}
lazy_static = "1.4.0"


[[example]]
name = "global_alloc"
path = "examples/global_alloc.rs"

[[example]]
name = "async_await"
path = "examples/async_await.rs"


[[example]]
name = "runtime"
path = "examples/runtime.rs"
